// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VueBlockDocument directives 1`] = `
    <B
      a=""
      onA={VueDX.internal.checkOnDirective(B, "a" as const, onNum, {""/*<VueDX:directiveCompletion/>*/:true})}
                                                            ^^^^^ > 5 at 718
      onB={VueDX.internal.checkOnDirective(B, "b" as const, onNum, {"once": true, ""/*<VueDX:directiveCompletion/>*/:true})}
      onC={VueDX.internal.checkOnDirective(B, "c" as const, ($event) => {
`;

exports[`VueBlockDocument directives 2`] = `
    <B
      a=""
      onA={VueDX.internal.checkOnDirective(B, "a" as const, onNum, {""/*<VueDX:directiveCompletion/>*/:true})}
                                                               ^^ > 2 at 721
      onB={VueDX.internal.checkOnDirective(B, "b" as const, onNum, {"once": true, ""/*<VueDX:directiveCompletion/>*/:true})}
      onC={VueDX.internal.checkOnDirective(B, "c" as const, ($event) => {
`;

exports[`VueBlockDocument directives 3`] = `
    <B
      a=""
      onA={VueDX.internal.checkOnDirective(B, "a" as const, onNum, {""/*<VueDX:directiveCompletion/>*/:true})}
                                                            ^^^^^ > 5 at 718
      onB={VueDX.internal.checkOnDirective(B, "b" as const, onNum, {"once": true, ""/*<VueDX:directiveCompletion/>*/:true})}
      onC={VueDX.internal.checkOnDirective(B, "c" as const, ($event) => {
`;

exports[`VueBlockDocument directives 4`] = `
    <B
      a=""
      onA={VueDX.internal.checkOnDirective(B, "a" as const, onNum, {""/*<VueDX:directiveCompletion/>*/:true})}
                                                               ^^ > 2 at 721
      onB={VueDX.internal.checkOnDirective(B, "b" as const, onNum, {"once": true, ""/*<VueDX:directiveCompletion/>*/:true})}
      onC={VueDX.internal.checkOnDirective(B, "c" as const, ($event) => {
`;

exports[`VueBlockDocument directives 5`] = `
      a=""
      onA={VueDX.internal.checkOnDirective(B, "a" as const, onNum, {""/*<VueDX:directiveCompletion/>*/:true})}
      onB={VueDX.internal.checkOnDirective(B, "b" as const, onNum, {"once": true, ""/*<VueDX:directiveCompletion/>*/:true})}
                                                                   ^ > 1 at 836
      onC={VueDX.internal.checkOnDirective(B, "c" as const, ($event) => {
        call.a['func']($event)
`;

exports[`VueBlockDocument directives 6`] = `
      onB={VueDX.internal.checkOnDirective(B, "b" as const, onNum, {"once": true, ""/*<VueDX:directiveCompletion/>*/:true})}
      onC={VueDX.internal.checkOnDirective(B, "c" as const, ($event) => {
        call.a['func']($event)
              ^^^^^^^^ > 8 at 982
      }, {""/*<VueDX:directiveCompletion/>*/:true})}
     data-vuedx-prop-completion-helper={VueDX.internal.propCompletionHelper("", B)} />
`;

exports[`VueBlockDocument directives 7`] = `
      onB={VueDX.internal.checkOnDirective(B, "b" as const, onNum, {"once": true, ""/*<VueDX:directiveCompletion/>*/:true})}
      onC={VueDX.internal.checkOnDirective(B, "c" as const, ($event) => {
        call.a['func']($event)
                       ^^^^^^ > 6 at 991
      }, {""/*<VueDX:directiveCompletion/>*/:true})}
     data-vuedx-prop-completion-helper={VueDX.internal.propCompletionHelper("", B)} />
`;
